# pingulacore-service

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_fullstack_dev.ps1  run_fullstack_dev.sh
backend/: .dockerignore  Dockerfile  alembic.ini  config.agents.yaml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2f3ac63f4728_baseline_initial_schema.py  634d7645dec6_add_user_permissions_table.py  a1b2c3d4e5f6_add_property_default_overrides.py
backend/app/: __init__.py  main.py
backend/app/agents/: agent_service.py  config.py
backend/app/api/: catalog_assets.py  content.py  logs.py
backend/app/core/: config.py
backend/app/db/: database.py  models.py  property_seed.py  repository.py
backend/app/schemas/: __init__.py  api.py  content.py  domain.py  html.py  layout.py  question.py  validation.py
backend/app/scripts/: __init__.py  import_ortak_yaml.py
backend/app/services/: explorer_service.py  log_stream_service.py  object_storage_service.py  pipeline_service.py  retry_service.py  (+3 more)
backend/docs/: alembic_runbook.md  codebase_documentation.md  kullanim_kilavuzu.md  ui_kullanim_kilavuzu.md
backend/scripts/: docker-entrypoint.sh  seed_root_properties.sql
backend/tests/: conftest.py  test_agent_temperature.py  test_agents.py  test_api_integration.py  test_auth_smoke.py  test_catalog_assets_bulk.py  test_catalog_assets_folders.py  test_explorer.py  test_legacy_session_output_store.py  test_pipeline_db.py  test_pipeline_support_endpoints.py  test_usage.py
(+943 files in other folders)
